# ChangeLog for app-shells/psh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/ChangeLog,v 1.29 2012/07/29 18:17:49 armin76 Exp $

  29 Jul 2012; Raúl Porcel <armin76@gentoo.org> psh-1.8.ebuild,
  psh-1.8-r1.ebuild, psh-1.8.1.ebuild:
  Drop alpha/ia64/sparc keywords

  29 Jun 2012; Brent Baude <ranger@gentoo.org> psh-1.8.1.ebuild:
  Marking psh-1.8.1 ppc for bug 423851

  28 Jun 2012; Agostino Sarubbo <ago@gentoo.org> psh-1.8.1.ebuild:
  Stable for amd64, wrt bug #423851

  28 Jun 2012; Jeff Horelick <jdhore@gentoo.org> psh-1.8.1.ebuild:
  marked x86 per bug 423851

  17 Jun 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  psh-1.8.1.ebuild:
  mark ~ppc (bug #226479)

  15 Jun 2008; Raúl Porcel <armin76@gentoo.org> psh-1.8.1.ebuild:
  Add ~ia64 wrt #226479

  15 Jun 2008; Tobias Klausmann <klausman@gentoo.org> psh-1.8.1.ebuild:
  Keyworded on alpha, bug #226479

*psh-1.8.1 (14 Jun 2008)

  14 Jun 2008; Jeremy Olexa <darkside@gentoo.org> +psh-1.8.1.ebuild:
  Version bump. Changed dependancy based on Possum's suggestion in bug
  #197904. Dropped kw's to ~ARCH and removed ia64, ppc, & alpha because
  package now requires a dep they don't have

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> psh-1.8-r1.ebuild:
  alpha/ia64/sparc/x86 stable

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -psh-0.009-r1.ebuild,
  -psh-0.009-r2.ebuild:
  QA: Removed unused versions.

  05 Jul 2005; Sven Wegener <swegener@gentoo.org> psh-1.8-r1.ebuild:
  QA: Added readline to IUSE.

  14 Mar 2005; <hparker@gentoo.org> :
  Mark ~amd64. Closes #85171

*psh-1.8-r1 (18 Feb 2005)

  18 Feb 2005; Aron Griffis <agriffis@gentoo.org> +psh-1.8-r1.ebuild:
  Add support for USE=readline #82001
