@@ -1,17 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST psh-1.8.1.tar.gz 120036 SHA256 9c6d276f98a3e62086bda76e1eddc0eaba6b003b903c94261bd53e80700ef88f SHA512 20ac6d6d39ff0820eee6314e73c02f18b9362ef3dde6e2c6cd68094d1ebc435d26bf3528e858042b95372916821077e5a4e5d4b376aac68caf6d8fc629a61c07 WHIRLPOOL 10d2005aa0a551823d82e475bb10d7619dfde21fc39dbee37989e08c4f8fd59b0a44ba3ea70157e55db80388ff4af099afe073c91bf0f3e95065e62f97539c95
-DIST psh-1.8.tar.gz 119989 SHA256 f72bc721bd563de6badaf893052cdbb201c15a16b8d50a01f02fd28a83385d1c SHA512 770d4444f11617d1d9e3f4ee1cdaf55472ae675b5f9cdbf795c8e7e5e3c39fe08294aa68463910645ea32a1b9eba056c68bb53074b65f6c48016c19a6f6ffd12 WHIRLPOOL 51c2f9ffc39d97fdf59ecf28afa9f4be245acd218e856ddda1367aea851d7186f02e7d1c93d8d919830ce13b5b60ad81d902884f7f1049aebab57bd18e2f7e29
-EBUILD psh-1.8-r1.ebuild 654 SHA256 6000846614635f8025062ee7194a51e38393783a86ab5a492d7ed521cb458ed1 SHA512 d5f7067ff954dcabb5ac49aeb0b17d3fe7a1ba22ab779c1337d26fc296a9af884f2252bcb238b4f59802721d84d8b2de53815fa359d13f140daa7d73c91c009b WHIRLPOOL bbd9a8fe1e811b0812f53bc0a57e6cc70370fe9f89f6b37634ef905d9b1caed295196db31de271d6620ea667a51ad49ff452b0508491c15df12c9f68653228f0
 EBUILD psh-1.8.1.ebuild 658 SHA256 688807d6c4e7dad14501dd31d8388468d388bb2a68c0cc4b211bf72c5dc19371 SHA512 9b6182c822ccce02e036932401c199f7dad22a1c50afe3e3da51e4f80cd168b58ada9570b9805b8d15090cae6a3c65c0b42ef41cc6dfc9db0de3975a166fd098 WHIRLPOOL 3f441a43712de91be329d565f3ec0887bb332b0a2254979bd11c09834358b01b7a4e592920401b151474df48095c5b1631da613aae22ce94028002e200b2a9ba
-EBUILD psh-1.8.ebuild 561 SHA256 89eab940e4ad44ffc5a938bda37cfb02b0ef762f28aeeb329178c55bd5dc6edb SHA512 9a575e593e200759beb23e8dae559a8d2abeea177c82502e410a846e113446edb3e9d9250bf3d70b8cbe9ca5a3060420d2a6bc53abe0417b758d0416c6f2b84d WHIRLPOOL 17371d80694dc82895bc21c1bd347ff76541a36d67105c830da7b5d1a127ab53769b7edc6afbaabb2b68f1bdf0a52dd22dac0a71e7a87ff5a1e5b5d5c0dc5f61
-MISC ChangeLog 3554 SHA256 974d765fcbc73de1528e7958273d5ad23a7ecb3f070ba3e515801395af5c56f8 SHA512 8c2eb395a632e95c247633069b834b83bcbaceb008a1782f9330f7c07fd89cd92cadb447329945c72c669ac55a023abf194ff5e80f8557a926cce65aabf519f8 WHIRLPOOL ed590e39fa0a0c5b7c0b05d9540a9dbefd7db5fc4cec06a43575fd12cf9da71f9c5f03973730f5c3361a7fc4a020b621ff08f72a3f02ad7a8a883458f41c9a2d
+MISC ChangeLog 3667 SHA256 49babca25a2ae2bcd2e4555ebaf8a3f11d2f7f169e0b068227b3f9156bef122f SHA512 a4c27e174adf36c27d14676dbc52435027d665157fede833e6feafd4abe5ca6bd3d82d387f051f654781786f8be32f43e279651e3fddc084fb2c3e85cd146f2d WHIRLPOOL bf3b88e22bda0f9c48b4643c0d27b1783ccd18bef8c55975dc20796b118178a255f735ab69e07943713561f9a82c179d46fcaf02556ecf518ded4f97e7950b68
 MISC metadata.xml 210 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39 SHA512 4554adeece55ce9adfdadba04443a3ede6ff910b96a11b77bb1f07ddd6bdbc756b8e6e1873660f8f54e67f46db1065980794a6136c6de7883b24d0ee13ff51fe WHIRLPOOL f546bd1233d5a9934ba0480881ceba944cb8ff1869c12ed2421d4ccbb247ee38dc0c7c8b979f10533ad0fc603b5e4829d0ddf174a83d0bda8e8dd62c1c873eeb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAlAVflQACgkQuQc30/atMkDejwCfac2H1nPoYjEsGk3QrOK9JP8E
-BykAoIJf8x02CSQFcCMCx6tjynLxBwr3
-=KlDe
+iQEcBAEBCAAGBQJQLnPFAAoJEMbwO6tnXQ0s3gsIAI4WCDRM/bj2VWsVUsday6Bk
+poZUyMEVGjsdNY+Z4oqEmZJZmYX8z4RLTR4/zL1bVsfKd4lgTdHy/5ngRnErjpEt
+IOWtpUrWYE83LacdFLZ3/KnRDfBsoc2Xajuj/EFnbywQBOhYvhgNm+MkL2uR/hrw
+p9e/i3e7yTvePKqOQQ6ycAIp+3vyflXVGY8DGrvrEFdXpEo1MF60uPiG9JuSKhe2
+B58oO+rMP/4Bb2R/C5e9FPaVvx29QTM+7cI8miJl172TdtXWU8IM0ZANMywtMtGI
+ci4gPtpzB7V+jJBkX+61CZOOu+zP0HT25xl6UqkPpF6EmIojLTCCWC2ciu3ALaI=
+=z1QR
 -----END PGP SIGNATURE-----
