@@ -1,18 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/psh-1.8.ebuild,v 1.11 2012/07/29 18:17:49 armin76 Exp $
-
-inherit perl-module
-
-DESCRIPTION="Combines the interactive nature of a Unix shell with the power of Perl"
-HOMEPAGE="http://www.focusresearch.com/gregor/psh/"
-SRC_URI="http://www.focusresearch.com/gregor/psh/${P}.tar.gz"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="ppc x86"
-IUSE=""
-
-DEPEND=">=dev-lang/perl-5"
-
-myinst="SITEPREFIX=${D}/usr"
