@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/psh
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/ChangeLog,v 1.29 2012/07/29 18:17:49 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/psh/ChangeLog,v 1.30 2012/08/17 16:39:58 kensington Exp $
+
+  17 Aug 2012; Michael Palimaka <kensington@gentoo.org> -psh-1.8-r1.ebuild,
+  -psh-1.8.ebuild:
+  Remove old.
 
   29 Jul 2012; Raúl Porcel <armin76@gentoo.org> psh-1.8.ebuild,
   psh-1.8-r1.ebuild, psh-1.8.1.ebuild:
